@@ -1,3 +1,10 @@
+2009-02-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* gmountoperation.[hc]: Add an "aborted" signal to abort a
+	mount operation from the backend side.
+
+	* gvolume.h: Add docs regarding the "aborted" signal.
+
 2009-02-13  Ryan Lortie  <desrt@desrt.ca>
 
 	Bug 505042 – add file attribute for actually used file size in bytes
